--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,23 @@
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Oswald:wght@300;400;600&display=swap');
+
+/* ##### VARS ##### */
+body {
+  --testing-border: solid 1px rgb(255, 87, 51);
+
+  --font-fam-oswald: 'Oswald', sans-serif;
+  --font-fam-serif: 'Libre Caslon', serif;
+  --font-fam-typewriter: 'Courier Prime', monospace;
+  --font-weight-bold: 700;
+
+  --font-size-reg: 1.0rem;
+  --font-size-lg: 1.125rem; 
+  --font-size-xl: 1.375rem;
+  --font-size-xxl: 1.5rem;
+  --font-size-xxxl: 2.0rem;
+  --font-size-xxxxl: 2.5rem;
+  
+}
+
 html,
 body {
   padding: 0;
@@ -17,23 +37,6 @@ main {
   align-items: center;
 }
 
-header {
-  width: 100%;
-  height: 100px;
-  border-bottom: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer {
-  width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
 
 a {
   color: inherit;
