--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,8 @@
+/* ##### TESTING ##### */
+.testingBorder {
+    border: var(--testing-border);
+}
+
 /* ##### FONTS ##### */
 .layoutContainer {
     margin: 0 auto;
