--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,10 @@
 /* ##### TESTING ##### */
 .testingBorder {
-    border: var(--testing-border);
+    border: var(--test-border);
 }
 
 /* ##### FONTS ##### */
 .layoutContainer {
     margin: 0 auto;
-    max-width: 1100px;
+    max-width: 1220px;
 }
