--- a/styles/modules/Home.module.css
+++ b/styles/modules/Home.module.css
@@ -1,4 +1,4 @@
-.homeGrid {
+.articleGrid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-row-gap: 30px;
@@ -7,11 +7,17 @@
     padding: 0;
 }
 
-.homePromoBlock {
-    background-color: lightgray;
+.feedItem {
+    position: relative;
     border: 1px solid black;
     text-align: center;
     line-height: 100px;
     height: 100px;
     width: 100%;
+    background-color: lightgray;
+}
+
+.feedItemImg {
+    border: var(--test-border);
+    object-fit: contain;
 }
