--- a/styles/modules/Home.module.css
+++ b/styles/modules/Home.module.css
@@ -2,22 +2,39 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     grid-row-gap: 30px;
-    grid-column-gap: 20px;
+    grid-column-gap: 40px;
     width: 100%;
     padding: 0;
 }
 
 .feedItem {
     position: relative;
-    border: 1px solid black;
-    text-align: center;
-    line-height: 100px;
-    height: 100px;
+    text-align: left;
     width: 100%;
-    background-color: lightgray;
 }
 
 .feedItemImg {
     border: var(--test-border);
-    object-fit: contain;
+    width: 100%;
+}
+
+.feedItemCategory {
+    font-family: var(--font-fam-oswald);
+    margin-bottom: var(--spacer-half);
+}
+
+.feedItemHeadline{
+    font-family: var(--font-fam-serif);
+    font-size: var(--font-size-xxl);
+    margin-bottom: var(--spacer-half);
+}
+
+.feedItemDescription{
+    font-family: var(--font-fam-serif);
+    font-size: var(--font-size-reg);
+    margin-bottom: var(--spacer-reg);
+}
+
+.feedItemByline{
+    font-family: var(--font-fam-oswald);
 }
